init screen fixed

--- a/templates/frame_set.html
+++ b/templates/frame_set.html
@@ -12,7 +12,7 @@
 <body>
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <div id="lock_screen">
-<iframe src="/game_renderer" autofocus="true" scrolling=no width=400px height=400px marginheight=0px marginwidth=0px></iframe>
+<iframe src="/login_screen/initial_ok" autofocus="true" scrolling=no width=400px height=400px marginheight=0px marginwidth=0px></iframe>
 </div>
 </meta>
 <script>
