--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@ p, ul, ol { font-size: 16px; font-weight: normal; margin-bottom: 20px; }
                 <tr>
                     <td align="center" class="masthead">
 
-                        <h1>Just a simple mutiplayer game...</h1>
+                        <h1>Just a simple FREE mutiplayer game...</h1>
 
                     </td>
                 </tr>
@@ -112,9 +112,9 @@ p, ul, ol { font-size: 16px; font-weight: normal; margin-bottom: 20px; }
                             </tr>
                         </table>
 
-                        <p>By the way, if you're wondering where you can find more of this fine meaty filler, visit <a href="http://baconipsum.com">Bacon Ipsum</a>.</p>
-
-                        <p><em>– Mr. Pen</em></p>
+                        <p>I am planning on putting a comment section here.</p>
+                        
+                        <p><em>- Adam </em></p>
 
                     </td>
                 </tr>
