logic fail text added

--- a/templates/login.html
+++ b/templates/login.html
@@ -21,6 +21,7 @@ form {
 </head>
 <body>
     <br><h1>Join the game ! </h1>
+    <p>{{ context_info }}</p>
       <form action="/login" method="POST" align="center">
        <table>
         <tr>
