--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width"/>
 
-    <!-- For development, pass document through inliner -->
-    <link rel="stylesheet" href="css/simple.css">
-
     <style type="text/css">
 
 * { margin: 0; padding: 0; font-size: 100%; font-family: 'Avenir Next', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; line-height: 1.65; }
@@ -61,7 +58,7 @@ p, ul, ol { font-size: 16px; font-weight: normal; margin-bottom: 20px; }
 
 .container .content.footer a:hover { text-decoration: underline; }
 
-    </style>
+</style>
 </head>
 <body>
 <table class="body-wrap">
@@ -79,12 +76,26 @@ p, ul, ol { font-size: 16px; font-weight: normal; margin-bottom: 20px; }
                 </tr>
                 <tr>
                     <td class="content">
-
+                        
+                        <table>
+                          <tr>
+                          <td>
+                            <img id="screenshot1" src="/get_website_img/screenshot_1.jpeg" alt="screenshot_1" style="width:100%">
+                          </td>
+                          <td>
+                            <img id="screenshot2" src="/get_website_img/screenshot_2.jpeg" alt="screenshot_1" style="width:100%">
+                          </td>
+                          <td>
+                            <img id="screenshot3" src="/get_website_img/screenshot_3.jpeg" alt="screenshot_1" style="width:100%">
+                          </td>
+                          </tr>
+                        </table>
+                        <br>
                         <h2>Hi guys,</h2>
 
                         <p>
-                        please enjoy the alpha sersion of my new online multiplayer game. 
-                        Simply type in your nick, type in the capcha and start playing.
+                        please enjoy the alpha version of my new online multiplayer game. 
+                        Simply type in your nickname, type in the capcha and start playing.
                         </p>
                         <p>
                         If you are on a desktop you may move around by using your 
@@ -129,8 +140,8 @@ p, ul, ol { font-size: 16px; font-weight: normal; margin-bottom: 20px; }
             <table>
                 <tr>
                     <td class="content footer" align="center">
-                        <p>Sent by <a href="#">Company Name</a>, 1234 Yellow Brick Road, OZ, 99999</p>
-                        <p><a href="mailto:">hello@company.com</a> | <a href="#">Unsubscribe</a></p>
+                        <p>Developped by <a href="#">AI MMO Games ;)</a></p>
+                        <p><a href="mailto:">aimmogames@gmail.com</a>
                     </td>
                 </tr>
             </table>
