--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="google-site-verification" content="AGv6-oAzp9IVs77FmhhlL7grLMvB1PB0-dtf6Hqr13I" />
     <meta name="viewport" content="width=device-width"/>
 
     <style type="text/css">
