more enemies + login fix

--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@ form {
          <td></td> <td><img id="my_capcha_image" src="/get_capcha_img1?" alt="capcha image"></td><br>
         </tr>
         <tr>
-         <td>Capcha (all lower case) :</td> <td><input type="capcha" name="capcha" placeholder="Text from the image"></td><br>
+         <td>Capcha (all numbers) :</td> <td><input type="capcha" name="capcha" placeholder="Text from the image"></td><br>
         </tr>
         <tr>
          <td></td> <td><input type="submit" value="Submit"></td>
