New enemies + log title

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="google-site-verification" content="AGv6-oAzp9IVs77FmhhlL7grLMvB1PB0-dtf6Hqr13I" />
     <meta name="viewport" content="width=device-width"/>
-
+    
+    <title>Crazyplanes: A free MMO webgame!</title>
+    
     <style type="text/css">
 
 * { margin: 0; padding: 0; font-size: 100%; font-family: 'Avenir Next', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; line-height: 1.65; }
