--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@ form {
 </style>
 </head>
 <body>
-    <br><h1>Join the game ! </h1>
+    <br><h1>Play the game ! </h1>
     <p>{{ context_info }}</p>
       <form action="/login" method="POST" align="center">
        <table>
@@ -34,7 +34,7 @@ form {
          <td>Capcha (all numbers) :</td> <td><input type="capcha" name="capcha" placeholder="Text from the image"></td><br>
         </tr>
         <tr>
-         <td></td> <td><input type="submit" value="Submit"></td>
+         <td></td> <td><input type="submit" value="Play"></td>
         </tr>
        </table>
       </form>
